--- a/MyWebAPI_24_03/appsettings.json
+++ b/MyWebAPI_24_03/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyDataModel1": "Server=.;Database= MyDataModel1_API;Integrated Security=True"
+    "MyDataModel1": "Server=TPHONG\\SQLEXPRESS;Database=MyDataModel1_API;Integrated Security=True"
   },
   "Logging": {
     "LogLevel": {
